# snyk-cloud-aws-importer

./: .gitignore  LICENSE  README.md  config.yaml.example  main.py  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: lambda_package_release.yml  snyk.yml
account_monitor/: README.md  build_lambda.sh  cloudformation.yaml  config.json.example  ct_event_template  orgs_event_template
account_monitor/assets/lambda/: main.py  requirements.txt
account_monitor/cloudformation/: cloudformation.yaml
account_monitor/lambda/: build_lambda.sh  config.yaml.example  main.py  requirements.txt
account_monitor/terraform/: main.tf  variables.tf
account_onboarder/: README.md  config.yaml.example  main.py  pyproject.toml
