[tool.poetry]
name = "account_onboarder"
version = "0.1.0"
description = "Onboards accounts in an AWS organization in to Snyk Cloud."
authors = ["Nathan Roys <nathan.roys@snyk.io>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.62"
colored = "^1.4.4"
requests = "^2.28.2"
typer = "^0.7.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
