#
# © 2023 Snyk Limited
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[tool.poetry]
name = "account_onboarder"
version = "0.1.0"
description = "Onboards accounts in an AWS organization in to Snyk Cloud."
authors = ["Nathan Roys <nathan.roys@snyk.io>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.62"
colored = "^1.4.4"
requests = "^2.28.2"
typer = "^0.7.0"
PyYAML = "^6.0"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
requests-mock = "^1.9.3"
pytest-isort = "^3"
black = "^22.1"
coverage = "^6.3.2"
types-requests = "^2.7.12"
types-retry = "^0.9.5"
mypy = ">=0.930"
types-PyYAML = "^6.0.4"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.black]
line-length = 119

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --mypy --isort --verbose --ignore examples --cov-report term-missing"
testpaths = [
    "../account_monitor/lambda",
    "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
